# multi-trait-object

./: Cargo.toml  README.md
src/: lib.rs  macros.rs  std_impl.rs  tests.rs
src/trait_impl/: debug.rs  mod.rs  try_clone.rs  try_partial_eq.rs
