[package]
name = "multi-trait-object"
version = "0.1.3"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
authors = ["trivernis"]
description = "A type to store an object with all associated traits"
repository = "https://github.com/Trivernis/multi-trait-object/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html